FIX: 90709 align sub header page title with page content

--- a/src/scss/components/DSRA/_ControlValidationAudit.scss
+++ b/src/scss/components/DSRA/_ControlValidationAudit.scss
@@ -8,7 +8,6 @@ $white-background: rgba(255, 255, 255, 0.7);
     margin-right: auto;
     margin-bottom: 80px;
     margin-bottom: 1rem;
-    padding: 20px;
   }
   .ControlValidationAuditForm {
     padding: 25px;
